Add registration via gRPC auth service
